--- a/data_analysis/table_analysis.ipynb
+++ b/data_analysis/table_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -533,6 +533,123 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# tokens analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import BertTokenizer\n",
+    "bert_tokenizer = BertTokenizer.from_pretrained(\"bert-base-cased\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "85995it [08:13, 174.22it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "title_lenght = []\n",
+    "summary_lenght = []\n",
+    "\n",
+    "for i,row in tqdm(raw_tables.iterrows()):\n",
+    "    \n",
+    "    title = str(row['table_page_title']) \n",
+    "    summary = str(row['table_page_summary'])\n",
+    "    \n",
+    "    lenght_title = len(bert_tokenizer.tokenize(title))\n",
+    "    lenght_summary= len(bert_tokenizer.tokenize(summary))\n",
+    "   \n",
+    "    title_lenght.append(lenght_title)\n",
+    "    summary_lenght.append(lenght_summary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "title tokens analysis analysis:\n",
+      "max words = 20\n",
+      "min words = 1\n",
+      "avg words = 5.128542357113786\n",
+      "std words = 2.089032582015461\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('title tokens analysis analysis:')\n",
+    "print(\"max words = \"+str(np.max(title_lenght)))\n",
+    "print(\"min words = \"+str(np.min(title_lenght)))\n",
+    "print(\"avg words = \"+str(np.mean(title_lenght)))\n",
+    "print(\"std words = \"+str(np.std(title_lenght)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "summary tokens analysis analysis:\n",
+      "max words = 1598\n",
+      "min words = 1\n",
+      "avg words = 115.88323739752312\n",
+      "std words = 68.168851710927\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('summary tokens analysis analysis:')\n",
+    "print(\"max words = \"+str(np.max(summary_lenght)))\n",
+    "print(\"min words = \"+str(np.min(summary_lenght)))\n",
+    "print(\"avg words = \"+str(np.mean(summary_lenght)))\n",
+    "print(\"std words = \"+str(np.std(summary_lenght)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -551,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
