--- a/encoder_models/encoder_model_title_main_passage/encoder_model_title_main_passage.ipynb
+++ b/encoder_models/encoder_model_title_main_passage/encoder_model_title_main_passage.ipynb
@@ -17,8 +17,44 @@
     "from nltk.tokenize import TweetTokenizer\n",
     "tknzr = TweetTokenizer()\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-    "warnings.filterwarnings('ignore')\n",
-    "import fasttext"
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device_name = tf.test.gpu_device_name()\n",
+    "if device_name != '/device:GPU:0':\n",
+    "    raise SystemError('GPU not found')\n",
+    "print('found GPU at {}'.format(device_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "physical_devices = tf.config.list_physical_devices('GPU')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.config.experimental.set_memory_growth(physical_devices[0], enable=True)"
    ]
   },
   {
@@ -77,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_PAD = 161\n",
+    "MAX_PAD = 86\n",
     "\n",
     "def sequence_padding(X_DIM, value):\n",
     "    \n",
@@ -134,9 +170,9 @@
     "\n",
     "for i,row in tqdm(train_data.iterrows()):\n",
     "    \n",
-    "    article_catch_all = str(row['article_page_title'])+\" \"+str(row['article_page_meta_description'])+\" \"+str(row['article_page_keywords'])\n",
-    "    true_table_catch_all = str(row['true_table_page_title'])+\" \"+str(row['true_table_page_summary'])+\" \"+str(row['true_table_page_keywords'])\n",
-    "    false_table_catch_all = str(row['false_table_page_title'])+\" \"+str(row['false_table_page_summary'])+\" \"+str(row['false_table_page_keywords'])\n",
+    "    article_catch_all = str(row['article_page_title'])+\" \"+str(row['article_page_meta_description'])\n",
+    "    true_table_catch_all = str(row['true_table_page_title'])+\" \"+str(row['true_table_page_summary'])\n",
+    "    false_table_catch_all = str(row['false_table_page_title'])+\" \"+str(row['false_table_page_summary'])\n",
     "    \n",
     "    train_article_page_title.append(create_embedding(article_catch_all))\n",
     "    train_true_table_page_title.append(create_embedding(true_table_catch_all))\n",
@@ -173,9 +209,9 @@
     "\n",
     "for i,row in tqdm(validation_data.iterrows()):\n",
     "    \n",
-    "    article_catch_all = str(row['article_page_title'])+\" \"+str(row['article_page_meta_description'])+\" \"+str(row['article_page_keywords'])\n",
-    "    true_table_catch_all = str(row['true_table_page_title'])+\" \"+str(row['true_table_page_summary'])+\" \"+str(row['true_table_page_keywords'])\n",
-    "    false_table_catch_all = str(row['false_table_page_title'])+\" \"+str(row['false_table_page_summary'])+\" \"+str(row['false_table_page_keywords'])\n",
+    "    article_catch_all = str(row['article_page_title'])+\" \"+str(row['article_page_meta_description'])\n",
+    "    true_table_catch_all = str(row['true_table_page_title'])+\" \"+str(row['true_table_page_summary'])\n",
+    "    false_table_catch_all = str(row['false_table_page_title'])+\" \"+str(row['false_table_page_summary'])\n",
     "    \n",
     "    validation_article_page_title.append(create_embedding(article_catch_all))\n",
     "    validation_true_table_page_title.append(create_embedding(true_table_catch_all))\n",
@@ -222,9 +258,9 @@
    "source": [
     "def triplet_loss(y_true, y_pred, alpha = 0.5):\n",
     "     \n",
-    "    anchor = y_pred[:,0:512]\n",
-    "    positive = y_pred[:,512:1024]\n",
-    "    negative = y_pred[:,1024:1536]\n",
+    "    anchor = y_pred[:,0:1024]\n",
+    "    positive = y_pred[:,1024:2048]\n",
+    "    negative = y_pred[:,2048:3072]\n",
     "        \n",
     "    # distance between the anchor and the positive\n",
     "    #pos_dist = tf.keras.backend.sum(tf.keras.backend.square(anchor-positive),axis=1)\n",
@@ -235,7 +271,8 @@
     "    neg_dist = tf.keras.layers.Dot(axes=1,normalize=True)([anchor, negative])\n",
     "    \n",
     "    # compute loss\n",
-    "    basic_loss = pos_dist-(neg_dist+alpha)\n",
+    "    #basic_loss = pos_dist-neg_dist+alpha\n",
+    "    basic_loss = (1 - pos_dist) - (1 - neg_dist) + alpha\n",
     "    loss = tf.keras.backend.maximum(basic_loss,0.0)\n",
     " \n",
     "    return loss"
@@ -253,7 +290,7 @@
     "    true_table_page_title = tf.keras.Input(shape=(161,50), dtype='float32')\n",
     "    false_table_page_title = tf.keras.Input(shape=(161,50), dtype='float32')\n",
     "\n",
-    "    context_layer = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(256))\n",
+    "    context_layer = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(512))\n",
     "   \n",
     "    #context vectors\n",
     "    context_article_page_title = context_layer(article_page_title)\n",
@@ -300,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath=\"encoder_all_signals_{epoch:02d}_{val_loss:.4f}.h5\"\n",
+    "filepath=\"encoder_title_main_passage_{epoch:02d}_{val_loss:.4f}.h5\"\n",
     "checkpoint = tf.keras.callbacks.ModelCheckpoint(filepath, monitor='val_loss', verbose=1, save_best_only=True, mode='min')\n",
     "callbacks_list = [checkpoint]"
    ]
@@ -311,14 +348,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with tf.device(\"/cpu:0\"):\n",
-    "\n",
-    "    history = model.fit([train_article_page_title,train_true_table_page_title,train_false_table_page_title], Y_train_dummy, \n",
-    "          epochs=100, \n",
-    "          batch_size=32,\n",
-    "          verbose=1,\n",
-    "          validation_data=([validation_article_page_title,validation_true_table_page_title,validation_false_table_page_title], Y_validation_dummy),\n",
-    "          callbacks=callbacks_list)"
+    "history = model.fit([train_article_page_title,train_true_table_page_title,train_false_table_page_title], Y_train_dummy, \n",
+    "      epochs=20, \n",
+    "      batch_size=32,\n",
+    "      verbose=1,\n",
+    "      validation_data=([validation_article_page_title,validation_true_table_page_title,validation_false_table_page_title], Y_validation_dummy),\n",
+    "      callbacks=callbacks_list)"
    ]
   },
   {
@@ -359,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
