--- a/encoder_models/encoder_model_title/encoder_model_title_GRU.ipynb
+++ b/encoder_models/encoder_model_title/encoder_model_title_GRU.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,6 @@
     "tknzr = TweetTokenizer()\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
     "warnings.filterwarnings('ignore')\n",
-    "import fasttext\n",
     "from sklearn.metrics import pairwise_distances"
    ]
   },
@@ -35,6 +34,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "device_name = tf.test.gpu_device_name()\n",
+    "if device_name != '/device:GPU:0':\n",
+    "    raise SystemError('GPU not found')\n",
+    "print('found GPU at {}'.format(device_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "physical_devices = tf.config.list_physical_devices('GPU')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.config.experimental.set_memory_growth(physical_devices[0], enable=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train_data = pd.read_csv('../train_data/train_triple_all_signals.csv', delimiter=',')\n",
     "validation_data = pd.read_csv('../train_data/validation_triple_all_signals.csv', delimiter=',')"
    ]
@@ -48,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,9 +201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "9417it [00:23, 407.85it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "validation_article_page_title = []\n",
     "validation_true_table_page_title = []\n",
@@ -175,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,15 +269,16 @@
     "    negative = y_pred[:,2048:3072]\n",
     "        \n",
     "    # distance between the anchor and the positive\n",
-    "    pos_dist = tf.keras.backend.sum(tf.keras.backend.square(anchor-positive),axis=1)\n",
-    "    #pos_dist = tf.keras.layers.Dot(axes=1,normalize=True)([anchor, positive])\n",
+    "    #pos_dist = tf.keras.backend.sum(tf.keras.backend.square(anchor-positive),axis=1)\n",
+    "    pos_dist = tf.keras.layers.Dot(axes=1,normalize=True)([anchor, positive])\n",
     "    \n",
     "    # distance between the anchor and the negative\n",
-    "    neg_dist = tf.keras.backend.sum(tf.keras.backend.square(anchor-negative),axis=1)\n",
-    "    #neg_dist = tf.keras.layers.Dot(axes=1,normalize=True)([anchor, negative])\n",
+    "    #neg_dist = tf.keras.backend.sum(tf.keras.backend.square(anchor-negative),axis=1)\n",
+    "    neg_dist = tf.keras.layers.Dot(axes=1,normalize=True)([anchor, negative])\n",
     "    \n",
     "    # compute loss\n",
-    "    basic_loss = pos_dist-(neg_dist+alpha)\n",
+    "    #basic_loss = pos_dist-neg_dist+alpha\n",
+    "    basic_loss = (1 - pos_dist) - (1 - neg_dist) + alpha\n",
     "    loss = tf.keras.backend.maximum(basic_loss,0.0)\n",
     " \n",
     "    return loss"
@@ -298,7 +350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath=\"encoder_euclidian_title_{epoch:02d}_{val_loss:.4f}.h5\"\n",
+    "filepath=\"encoder_title_{epoch:02d}_{val_loss:.4f}.h5\"\n",
     "checkpoint = tf.keras.callbacks.ModelCheckpoint(filepath, monitor='val_loss', verbose=1, save_best_only=True, mode='min')\n",
     "callbacks_list = [checkpoint]"
    ]
@@ -308,23 +360,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "with tf.device(\"/cpu:0\"):\n",
-    "\n",
-    "    history = model.fit([train_article_page_title,train_true_table_page_title,train_false_table_page_title], Y_train_dummy, \n",
-    "          epochs=20, \n",
-    "          batch_size=32,\n",
-    "          verbose=1,\n",
-    "          validation_data=([validation_article_page_title,validation_true_table_page_title,validation_false_table_page_title], Y_validation_dummy),\n",
-    "          callbacks=callbacks_list)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with tf.device(\"/GPU:0\"):\n",
+    "\n",
+    "    history = model.fit([train_article_page_title,train_true_table_page_title,train_false_table_page_title], Y_train_dummy, \n",
+    "          epochs=100, \n",
+    "          batch_size=32,\n",
+    "          verbose=1,\n",
+    "          validation_data=([validation_article_page_title,validation_true_table_page_title,validation_false_table_page_title], Y_validation_dummy),\n",
+    "          callbacks=callbacks_list)"
+   ]
   },
   {
    "cell_type": "code",
@@ -357,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
