--- a/encoder_models/encoder_model_title_main_passage/test_encoder_model_GRU_title_main_passage.ipynb
+++ b/encoder_models/encoder_model_title_main_passage/test_encoder_model_GRU_title_main_passage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device_name = tf.test.gpu_device_name()\n",
+    "if device_name != '/device:GPU:0':\n",
+    "    raise SystemError('GPU not found')\n",
+    "print('found GPU at {}'.format(device_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "physical_devices = tf.config.list_physical_devices('GPU')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.config.experimental.set_memory_growth(physical_devices[0], enable=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,15 +89,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def triplet_loss(y_true, y_pred, alpha = 0.4):\n",
+    "def triplet_loss(y_true, y_pred, alpha = 0.5):\n",
     "     \n",
-    "    anchor = y_pred[:,0:256]\n",
-    "    positive = y_pred[:,256:512]\n",
-    "    negative = y_pred[:,512:1024]\n",
+    "    anchor = y_pred[:,0:1024]\n",
+    "    positive = y_pred[:,1024:2048]\n",
+    "    negative = y_pred[:,2048:3072]\n",
     "        \n",
     "    # distance between the anchor and the positive\n",
     "    #pos_dist = tf.keras.backend.sum(tf.keras.backend.square(anchor-positive),axis=1)\n",
@@ -64,7 +108,8 @@
     "    neg_dist = tf.keras.layers.Dot(axes=1,normalize=True)([anchor, negative])\n",
     "    \n",
     "    # compute loss\n",
-    "    basic_loss = pos_dist-(neg_dist+alpha)\n",
+    "    #basic_loss = pos_dist-neg_dist+alpha\n",
+    "    basic_loss = (1 - pos_dist) - (1 - neg_dist) + alpha\n",
     "    loss = tf.keras.backend.maximum(basic_loss,0.0)\n",
     " \n",
     "    return loss"
@@ -72,15 +117,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "article_page_title = tf.keras.Input(shape=(31,50), dtype='float32')\n",
-    "true_table_page_title = tf.keras.Input(shape=(31,50), dtype='float32')\n",
-    "false_table_page_title = tf.keras.Input(shape=(31,50), dtype='float32')\n",
+    "article_page_title = tf.keras.Input(shape=(161,50), dtype='float32')\n",
+    "true_table_page_title = tf.keras.Input(shape=(161,50), dtype='float32')\n",
+    "false_table_page_title = tf.keras.Input(shape=(161,50), dtype='float32')\n",
     "\n",
-    "context_layer = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(256))\n",
+    "context_layer = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(512))\n",
     "\n",
     "#context vectors\n",
     "context_article_page_title = context_layer(article_page_title)\n",
@@ -94,45 +139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"model_1\"\n",
-      "__________________________________________________________________________________________________\n",
-      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
-      "==================================================================================================\n",
-      "input_4 (InputLayer)            [(None, 31, 50)]     0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "input_5 (InputLayer)            [(None, 31, 50)]     0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "input_6 (InputLayer)            [(None, 31, 50)]     0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "bidirectional_1 (Bidirectional) (None, 512)          473088      input_4[0][0]                    \n",
-      "                                                                 input_5[0][0]                    \n",
-      "                                                                 input_6[0][0]                    \n",
-      "__________________________________________________________________________________________________\n",
-      "concatenate_1 (Concatenate)     (None, 1536)         0           bidirectional_1[0][0]            \n",
-      "                                                                 bidirectional_1[1][0]            \n",
-      "                                                                 bidirectional_1[2][0]            \n",
-      "==================================================================================================\n",
-      "Total params: 473,088\n",
-      "Trainable params: 473,088\n",
-      "Non-trainable params: 0\n",
-      "__________________________________________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "encoder_model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,20 +157,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoder_model.load_weights('encoder_title_01_0.0000.h5')"
+    "encoder_model.load_weights('encoder_title_main_passage_05_0.0245.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_encoder_model = tf.keras.Model(article_page_title,encoder_model.get_layer('bidirectional_1').output)"
+    "final_encoder_model = tf.keras.Model(article_page_title,encoder_model.get_layer('bidirectional').output)"
    ]
   },
   {
@@ -173,29 +189,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/lss9/anaconda3/lib/python3.7/site-packages/smart_open/smart_open_lib.py:402: UserWarning: This function is deprecated, use smart_open.open instead. See the migration notes for details: https://github.com/RaRe-Technologies/smart_open/blob/master/README.rst#migrating-to-the-new-open-function\n",
-      "  'See the migration notes for details: %s' % _MIGRATION_NOTES_URL\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fast_text_embedding = gs.models.FastText.load('../../train_embedding_models/fasttext_embedding_50d_all_signals')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_PAD = 31\n",
+    "MAX_PAD = 86\n",
     "\n",
     "def sequence_padding(X_DIM, value):\n",
     "    \n",
@@ -206,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +250,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "articles.head(1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,27 +263,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1026it [00:00, 4487.25it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "articles_ids = []\n",
     "articles_fasttext_embedding = []\n",
     "\n",
     "for i, row in tqdm(articles.iterrows()):\n",
     "    \n",
-    "    article_page_title = row['page_title']\n",
+    "    article_title = row['page_title']\n",
+    "    article_meta_description = row['meta_description']\n",
+    "    article_keywords = row['keywords']\n",
+    "    \n",
+    "    catch_all = article_title+\" \"+article_meta_description\n",
     "       \n",
     "    #fast text embedding\n",
-    "    title_fast_text_embedding = create_embedding(article_page_title)\n",
+    "    title_fast_text_embedding = create_embedding(catch_all)\n",
     "    \n",
     "    #save list\n",
     "    articles_ids.append(row['page_id'])\n",
@@ -283,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,13 +297,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with tf.device(\"/cpu:0\"):\n",
-    "    \n",
-    "    articles_vector = final_encoder_model.predict(x=articles_fasttext_embedding)"
+    "articles_vector = final_encoder_model.predict(x=articles_fasttext_embedding)"
    ]
   },
   {
@@ -327,21 +330,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tables.head(1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "85900it [00:17, 5009.08it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tables_ids = []\n",
     "tables_fastext_embedding = []\n",
@@ -349,9 +346,13 @@
     "for i, row in tqdm(tables.iterrows()):\n",
     "    \n",
     "    table_title = row['table_page_title']\n",
+    "    table_pg_summary = row['table_page_summary']\n",
+    "    table_pg_keywords = row['table_page_keywords']\n",
+    "    \n",
+    "    catch_all = table_title+\" \"+table_pg_summary\n",
     "    \n",
     "    #fast text embedding\n",
-    "    title_fast_text_embedding = create_embedding(table_title)\n",
+    "    title_fast_text_embedding = create_embedding(catch_all)\n",
     "    \n",
     "    tables_ids.append(row['table_id'])\n",
     "    tables_fastext_embedding.append(title_fast_text_embedding) "
@@ -359,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,13 +369,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with tf.device(\"/cpu:0\"):\n",
-    "    \n",
-    "    tables_vector = final_encoder_model.predict(x=tables_fastext_embedding)"
+    "tables_vector = final_encoder_model.predict(x=tables_fastext_embedding)"
    ]
   },
   {
@@ -421,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,17 +480,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1026/1026 [05:06<00:00,  4.39it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "AverageTop1 = []\n",
     "AverageTop5 = []\n",
@@ -506,7 +497,7 @@
     "    \n",
     "    idQueryGoal = articles_ids[i]\n",
     "    \n",
-    "    distance_vector = pairwise_distances(articles_vector[i].reshape(1,512), tables_vector, metric='cosine')\n",
+    "    distance_vector = pairwise_distances(articles_vector[i].reshape(1,1024), tables_vector, metric='cosine')\n",
     "    \n",
     "    #creating the dataframe\n",
     "    all_tables_score = []\n",
@@ -539,22 +530,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TOP@1 = 0.1053\n",
-      "TOP@5 = 0.1501\n",
-      "TOP@10 = 0.1686\n",
-      "TOP@20 = 0.1901\n",
-      "TOP@50 = 0.2222\n",
-      "TOP@100 = 0.2417\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"TOP@1 = \"+ str(round(np.mean(AverageTop1),4)))\n",
     "print(\"TOP@5 = \"+ str(round(np.mean(AverageTop5),4)))\n",
@@ -602,7 +580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
