organizing files and folders

--- a/encoder_models/encoder_bert/encoder_model_title_BERT.ipynb
+++ b/encoder_models/encoder_bert/encoder_model_title_BERT.ipynb
@@ -9,7 +9,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "from transformers import TFBertModel, BertTokenizer, TFBertMainLayer"
    ]
   },
   {
@@ -65,9 +66,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from transformers import TFBertModel, BertTokenizer"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -101,6 +100,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model_bert_layer = TFBertMainLayer(bert_model.config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train_data = pd.read_csv('../train_data/train_triple_all_signals.csv', delimiter=',')\n",
     "validation_data = pd.read_csv('../train_data/validation_triple_all_signals.csv', delimiter=',')"
    ]
@@ -117,7 +132,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# train_data = train_data.head(100)\n",
+    "# validation_data = validation_data.head(100)"
+   ]
   },
   {
    "cell_type": "code",
@@ -492,9 +510,9 @@
     "table_false_title_token_id = tf.keras.layers.Input(shape=(MAX_TOKENS,), name='token_ids_token3', dtype='int32')\n",
     "\n",
     "#bert model layers\n",
-    "last_hidden_state1, pooled_output1 = bert_model([article_title_id,article_title_mask_id,article_title_token_id])\n",
-    "last_hidden_state2, pooled_output2 = bert_model([table_true_title_id,table_true_title_mask_id,table_true_title_token_id])\n",
-    "last_hidden_state3, pooled_output3 = bert_model([table_false_title_id,table_false_title_mask_id,table_false_title_token_id])\n",
+    "last_hidden_state1, pooled_output1 = model_bert_layer([article_title_id,article_title_mask_id,article_title_token_id])\n",
+    "last_hidden_state2, pooled_output2 = model_bert_layer([table_true_title_id,table_true_title_mask_id,table_true_title_token_id])\n",
+    "last_hidden_state3, pooled_output3 = model_bert_layer([table_false_title_id,table_false_title_mask_id,table_false_title_token_id])\n",
     "\n",
     "concatenated = tf.keras.layers.Concatenate(axis=-1)([pooled_output1, pooled_output2, pooled_output3])\n",
     "\n",
@@ -551,7 +569,7 @@
    "outputs": [],
    "source": [
     "filepath=\"encoder_BERT_{epoch:02d}_{val_loss:.4f}.h5\"\n",
-    "checkpoint = tf.keras.callbacks.ModelCheckpoint(filepath, monitor='val_loss', verbose=1, save_best_only=True, mode='min', save_weights_only=True)\n",
+    "checkpoint = tf.keras.callbacks.ModelCheckpoint(filepath, monitor='val_loss', verbose=1, save_best_only=True, mode='min')\n",
     "callbacks_list = [checkpoint]"
    ]
   },
@@ -584,8 +602,68 @@
     "                     val_input_ids_table_false_title,\n",
     "                     val_input_masks_table_false_title,\n",
     "                     val_input_token_id_table_false_title], Y_validation_dummy),\n",
-    "                   callbacks=callbacks_list)"
+    "                    callbacks = callbacks_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bert_model.save_pretrained('fine_tuning_bert/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model.save(\"encoder_bert.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
